--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Broadway Project Start
+<!DOCTYPE html>
+<html>
+<head>
+<title> Broadway Design</title>
+<link href="css/style.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+<div>
+
+<div class="building">
+<nav>
+  <h1> Broadway Design</h1>
+  <p class ="menu"><a href="./">Home</a></p>
+  <p class ="menu"><a href="#process">Process</a></p>
+  <p class="menu"><a href="#work">Work</a></p>
+  <p class="menu"><a href="#team">Team</a></p>
+  <p class="menu"><a href="#contact">Contact</a></p>
+</nav>
+</div>
+
+<div id="process">
+  <h4>Our Process</h4>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+
+  <h3>Identify</h3>
+    <p>We focus on the most important details</p>
+
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+  <h3>Understand</h3>
+    <p>We study our projects inside and out</p>
+
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+  <h3>Execute</h3>
+    <p>We put everything we have into our work</p>
+  <h3 class="design">Designed in New York</h3>
+</div>
+
+<div id="work">
+  <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+</div>
+<div id="team">
+  <h3>Team</h3>
+    <p>We're Hiring!</p>
+</div>
+
+<div id="contact">
+  <h3>Contact</h3>
+    <p>Phone: (678) 999-8212 </p>
+    <p>Email: hellobrazil2017andme@gmail.com </p>
+    <p>Twitter: @thisishowwedoit </p>
+</div>
+
+
+<p id="way"><span class="waytwo">&copyBroadway</span> <span><a href="./">Home</a></span> <span><a href="./about">About</a></span>
+  <span><a href="./work">Work</a></span> <span><a href="./team">Team</a></span> <span><a href="./contact">Contact</a></span></p>
+</body>
+</html>
